recursion.logo.koch.Koch.scala.error
Erreur de compilation :
Koch:27: error: expected start of definition
	override def run() {
                 ^Koch:30: error: Unmatched closing brace '}' ignored here
}
^